# sd_bus_example

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
data/: com.gateway.linux.conf
src/: client.cpp  server.cpp
